modify nav a style to fix edge spacing

--- a/src/global.scss
+++ b/src/global.scss
@@ -255,7 +255,7 @@ body {
 /* line 37, ../sass/global.sass */
 .header nav a {
   color: $label-text-color;
-  margin-left: 20px;
+  margin: 20px;
 }
 /* line 40, ../sass/global.sass */
 .header nav a:hover {
